@@ -61,7 +61,7 @@ public class PeakReader {
     public void linkResonances() {
         for (var entry : resMap.entrySet()) {
             List<PeakDim> peakDims = entry.getValue();
-            PeakDim firstPeakDim = peakDims.get(0);
+            PeakDim firstPeakDim = peakDims.getFirst();
             if (peakDims.size() > 1) {
 
                 for (PeakDim peakDim : peakDims) {
@@ -75,20 +75,29 @@ public class PeakReader {
     }
 
     public PeakList readPeakList(String fileName) throws IOException {
-        return readPeakList(fileName, null);
+        return readPeakList(fileName, null, null);
     }
 
-    public PeakList readPeakList(String fileName, Map<String, Object> pMap) throws IOException {
-        Path path = Paths.get(fileName);
+    public PeakList readPeakList(String fileName, DatasetBase dataset) throws IOException {
+        return readPeakList(fileName, dataset, null);
+    }
+
+    public String getType(Path path) throws IOException {
         PeakFileDetector detector = new PeakFileDetector();
-        String type = detector.probeContentType(path);
+        return detector.probeContentType(path);
+    }
+
+    public PeakList readPeakList(String fileName, DatasetBase dataset, Map<String, Object> pMap) throws IOException {
+        Path path = Paths.get(fileName);
+        String type = getType(path);
         return switch (type) {
             case "xpk2" -> readXPK2Peaks(fileName);
             case "xpk" -> readXPKPeaks(fileName);
             case "sparky_save" -> readSparkySaveFile(fileName, pMap);
             case "sparky_assign" -> readSparkyAssignmentFile(fileName);
             case "nmrpipe" -> readNMRPipePeaks(fileName);
-            case "xeasy" -> readXEASYPeaks(fileName);
+            case "xeasy" -> readXEASYPeaks(fileName, dataset);
+            case "ccpn" -> readCCPNPeaks(fileName, dataset);
             default -> throw new IllegalArgumentException("Invalid file type " + fileName);
         };
     }
@@ -257,9 +266,6 @@ public class PeakReader {
                 if (getID) {
                     dataIndex += 1;
                 }
-                //   id      HN.L    HN.P    HN.WH   HN.B    HN.E    HN.J    HN.U
-                // N.L     N.P     N.WH    N.B     N.E     N.J     N.U
-                // volume  intensity       status  comment flags
                 if (dataIndex != null) {
                     String value = null;
                     try {
@@ -423,10 +429,10 @@ public class PeakReader {
                     }
                 }
                 if (listMap.containsKey(DATASET)) {
-                    peakList.setDatasetName(listMap.get(DATASET).get(0));
+                    peakList.setDatasetName(listMap.get(DATASET).getFirst());
                 }
                 if (listMap.containsKey(CONDITION)) {
-                    peakList.setSampleConditionLabel(listMap.get(CONDITION).get(0));
+                    peakList.setSampleConditionLabel(listMap.get(CONDITION).getFirst());
                 }
             } else {
                 List<String> labels = getLabels(listFields);
@@ -649,19 +655,19 @@ public class PeakReader {
                 sf = 600.0;
                 sw = 5000.0;
 
-                peakList.getSpectralDim(i).setDimName("1H" + "_" + atomDim.merge("H", 1, (a, b) -> a + b));
+                peakList.getSpectralDim(i).setDimName("1H" + "_" + atomDim.merge("H", 1, Integer::sum));
                 peakList.getSpectralDim(i).setNucleus("1H");
             } else if (atomName.startsWith("N")) {
                 sf = 600.0 * Nuclei.N15.getFreqRatio();
                 sw = 2000.0;
                 widthHz = 30.0f;
-                peakList.getSpectralDim(i).setDimName("15N" + "_" + atomDim.merge("N", 1, (a, b) -> a + b));
+                peakList.getSpectralDim(i).setDimName("15N" + "_" + atomDim.merge("N", 1, Integer::sum));
                 peakList.getSpectralDim(i).setNucleus("15N");
             } else if (atomName.startsWith("C")) {
                 widthHz = 30.0f;
                 sf = 600.0 * Nuclei.C13.getFreqRatio();
                 sw = 4000.0;
-                peakList.getSpectralDim(i).setDimName("13C" + "_" + atomDim.merge("C", 1, (a, b) -> a + b));
+                peakList.getSpectralDim(i).setDimName("13C" + "_" + atomDim.merge("C", 1, Integer::sum));
                 peakList.getSpectralDim(i).setNucleus("13C");
             }
             peakList.getSpectralDim(i).setSf(sf);
@@ -671,14 +677,60 @@ public class PeakReader {
         peakDim.setBoundsHz(widthHz * 3.0f);
     }
 
-    public PeakList readXEASYPeaks(String fileName) throws IOException {
-        XEASYPeakReader xeasyPeakReader = new XEASYPeakReader();
+    String stripExtension(String s) {
+        int dot = s.lastIndexOf(".");
+        if (dot != -1) {
+            s = s.substring(0, dot);
+        }
+        return s;
+    }
+
+    Optional<DatasetBase> findDataset(PeakList peakList) {
+        String listName = peakList.getName();
+        return DatasetBase.datasets().stream().filter(d -> listName.contains(stripExtension(d.getName()))).filter(d -> d.getNDim() == peakList.getNDim()).findFirst();
+    }
+
+    void setPeakListDims(PeakList peakList, DatasetBase dataset) {
+        peakList.setDatasetName(dataset.getName());
+        for (int i=0;i<dataset.getNDim();i++) {
+            setPeakListDims(peakList, dataset, i);
+        }
+    }
+
+    void setPeakListDims(PeakList peakList, DatasetBase dataset, String dimLabel) {
+        int iDim = dataset.getDim(dimLabel);
+        SpectralDim spectralDim = peakList.getSpectralDim(dimLabel);
+        if ((iDim >= 0) && (spectralDim != null)) {
+            spectralDim.setSf(dataset.getSf(iDim));
+            spectralDim.setSw(dataset.getSw(iDim));
+            spectralDim.setNucleus(dataset.getNucleus(iDim).getNumberName());
+        }
+    }
+
+    void setPeakListDims(PeakList peakList, DatasetBase dataset, int iDim) {
+        SpectralDim spectralDim = peakList.getSpectralDim(iDim);
+        if ((iDim >= 0) && (spectralDim != null)) {
+            spectralDim.setDimName(dataset.getLabel(iDim));
+            spectralDim.setSf(dataset.getSf(iDim));
+            spectralDim.setSw(dataset.getSw(iDim));
+            spectralDim.setNucleus(dataset.getNucleus(iDim).getNumberName());
+        }
+    }
+
+
+    public PeakList readXEASYPeaks(String fileName, DatasetBase dataset) throws IOException {
+        XEASYPeakReader xeasyPeakReader = new XEASYPeakReader(dataset);
         return xeasyPeakReader.readPeaks(fileName);
     }
 
     class XEASYPeakReader {
         String fileTail;
         PeakList peakList;
+        DatasetBase dataset;
+
+        XEASYPeakReader(DatasetBase dataset) {
+            this.dataset = dataset;
+        }
 
         PeakList readPeaks(String fileName) throws IOException {
             Path path = Paths.get(fileName);
@@ -719,13 +771,16 @@ public class PeakReader {
                 String[] fields = line.split(" +", -1);
                 int nDim = Integer.parseInt(fields[fields.length - 1]);
                 peakList = new PeakList(fileTail, nDim);
-            } else if (line.startsWith("INAME")) {
+                if (dataset != null) {
+                    setPeakListDims(peakList, dataset);
+                }
+            } else if (line.startsWith("INAME") && (dataset == null)) {
                 String[] fields = line.split(" +", -1);
                 int iDim = Integer.parseInt(fields[1]) - 1;
                 String dimName = fields[2];
                 var sDim = peakList.getSpectralDim(iDim);
                 sDim.setDimName(dimName);
-            } else if (line.startsWith("SPECTRUM")) {
+            } else if (line.startsWith("SPECTRUM") && (dataset == null)) {
                 String[] fields = line.split(" +", -1);
                 var datasetOpt = findDataset(peakList);
                 datasetOpt.ifPresent(dataset -> {
@@ -736,31 +791,8 @@ public class PeakReader {
             }
         }
 
-        String stripExtension(String s) {
-            int dot = s.lastIndexOf(".");
-            if (dot != -1) {
-                s = s.substring(0, dot);
-            }
-            return s;
-        }
-        Optional<DatasetBase> findDataset(PeakList peakList) {
-            String listName = peakList.getName();
-            return DatasetBase.datasets().stream().filter(d -> listName.contains(stripExtension(d.getName()))).filter(d -> d.getNDim() == peakList.getNDim()).findFirst();
-        }
-
-        void setPeakListDims(PeakList peakList, DatasetBase dataset, String dimLabel) {
-            int iDim = dataset.getDim(dimLabel);
-            SpectralDim spectralDim = peakList.getSpectralDim(dimLabel);
-            if ((iDim >= 0) && (spectralDim != null)) {
-                spectralDim.setSf(dataset.getSf(iDim));
-                spectralDim.setSw(dataset.getSw(iDim));
-                spectralDim.setNucleus(dataset.getNucleus(iDim).getNumberName());
-            }
-        }
-
         void processXEASYLine(String[] data) {
             int nDim = peakList.getNDim();
-            int iPeak = Integer.parseInt(data[0]);
             Peak peak = peakList.getNewPeak();
             float intensity = Float.parseFloat(data[nDim + 3]);
             peak.setIntensity(intensity);
@@ -876,6 +908,14 @@ public class PeakReader {
         }
         return result;
     }
+    private String getPipeStrValue(Map<String, Integer> dataMap, String[] data, String varName) {
+        Integer index = dataMap.get(varName);
+        String result = "";
+        if (index != null) {
+             result = data[index];
+        }
+        return result;
+    }
 
     private void setSfSw(PeakList peakList, Map<String, Integer> dataMap, String[] data, List<double[]> ppmStarts) {
 
@@ -939,4 +979,93 @@ public class PeakReader {
         }
     }
 
+    PeakList readCCPNPeaks(String fileName, DatasetBase dataset) throws IOException {
+        Path path = Paths.get(fileName);
+        boolean gotHeader = false;
+        PeakList peakList = null;
+        Map<String, Integer> dataMap = new HashMap<>();
+        String fileTail = path.getFileName().toString();
+        fileTail = fileTail.substring(0, fileTail.lastIndexOf('.'));
+        String listName = fileTail;
+
+        try (final BufferedReader fileReader = Files.newBufferedReader(path)) {
+            while (true) {
+                String line = fileReader.readLine();
+                if (line == null) {
+                    break;
+                }
+                line = line.trim();
+                if (line.isEmpty()) {
+                    continue;
+                }
+                if (!gotHeader) {
+                    peakList =  processCCPNHeader(listName, line, dataMap);
+                    if (dataset != null) {
+                        setPeakListDims(peakList, dataset);
+                    }
+                    gotHeader = true;
+                } else {
+                    String[] data = line.split(",");
+                    if (peakList != null) {
+                        processCCPNLine(peakList, dataMap, data);
+                    }
+                }
+            }
+        }
+        return peakList;
+    }
+
+    public PeakList processCCPNHeader(String listName, String line, Map<String, Integer> dataMap) {
+        String[] fields = line.split(",");
+        int i = 0;
+        int nDim = 0;
+        for (String field : fields) {
+            field = field.strip().toUpperCase();
+            dataMap.put(field, i++);
+            int len = field.length();
+
+            if ((len > 4) && field.substring(len - 3, len-1).equalsIgnoreCase(" F") ) {
+                String digit = field.substring(len-1);
+                int iDim = Integer.parseInt(digit);
+                nDim = Math.max(nDim, iDim);
+            }
+        }
+        return new PeakList(listName, nDim);
+    }
+
+    public void processCCPNLine(PeakList peakList, Map<String, Integer> dataMap, String[]
+            data) {
+        Peak peak = peakList.getNewPeak();
+        Double intensity = getPipeValue(dataMap, data, "HEIGHT");
+        if (intensity != null) {
+            peak.setIntensity(intensity.floatValue());
+        }
+        Double volume = getPipeValue(dataMap, data, "VOLUME");
+        if (volume != null) {
+            peak.setVolume1(volume.floatValue());
+        }
+        int nDim = peakList.getNDim();
+
+        for (int iDim = 0; iDim < nDim; iDim++) {
+            PeakDim peakDim = peak.getPeakDim(iDim);
+            String axis = "F" + (iDim+1);
+            Double shift = getPipeValue(dataMap, data, "POSITION " + axis);
+            if (shift != null) {
+                peakDim.setChemShiftValue(shift.floatValue());
+            }
+
+            Double wHz = getPipeValue(dataMap, data, "LINE WIDTH " + axis + " (HZ)");
+            if (wHz != null) {
+                peakDim.setLineWidthHz(wHz.floatValue());
+                peakDim.setBoundsHz((float) (wHz * 2.0));
+            }
+            String label = getPipeStrValue(dataMap, data, "ASSIGN " + axis);
+            if (label != null) {
+                if (label.equalsIgnoreCase("None")) {
+                    label = "";
+                }
+                peakDim.setLabel(label);
+            }
+        }
+    }
 }
